@@ -24,7 +24,7 @@ content of dictionary references.
   <active>yes</active>
  </contributor>
  <date>2012-10-04</date>
- <time>10:36:48</time>
+ <time>11:18:47</time>
  <version>
   <release>2.9.0</release>
   <api>2.9.0</api>
@@ -43,6 +43,7 @@ Additions and changes:
 will not be print anymore on standard output when --report-file option used
 - CAUTION: BC breaks with API 2.8.0 with the new filter system
 - list-references does not require --reference option anymore (always used ALL)
+- results of list-references may now be filtered
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
@@ -1338,6 +1339,7 @@ Additions and changes:
 will not be print anymore on standard output when --report-file option used
 - CAUTION: BC breaks with API 2.8.0 with the new filter system
 - list-references does not require --reference option anymore (always used ALL)
+- results of list-references may now be filtered
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
