@@ -15,6 +15,7 @@ PHP_CompatInfo ChangeLog
 will not be print anymore on standard output when _--report-file_ option used
 * CAUTION: BC breaks with API 2.8.0 with the new filter system
 * *list-references* does not require _--reference_ option anymore (always used ALL)
+* results of *list-references* may now be filtered
 
 .Bug fixes:
 * PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
